# ad-hoc_communication-primitives

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  fabfile.py
CommunicationPrimitives/: CMakeLists.txt
CommunicationPrimitives/applications/: bcast_framework_test.c  graph_test.c  hash_table_test.c  topology_discovery_test.c
CommunicationPrimitives/data_structures/: double_list.c  double_list.h  graph.c  graph.h  hash_table.c  hash_table.h  list.c  list.h
CommunicationPrimitives/protocols/broadcast/framework/: bcast_algorithms.c  bcast_algorithms.h  bcast_header.h  framework.c  framework.h  messages.c  messages.h  modules.h
CommunicationPrimitives/protocols/broadcast/framework/r_contexts/: ComposeContext.c  EmptyContext.c  HopsContext.c  LabelNeighsContext.c  NeighborsContext.c  ParentsContext.c  r_contexts.h
CommunicationPrimitives/protocols/broadcast/framework/r_delays/: DensityNeighDelay.c  NullDelay.c  RandomDelay.c  SimpleNeighDelay.c  TwoPhaseRandomDelay.c  r_delays.h
CommunicationPrimitives/protocols/broadcast/framework/r_policies/: CountPolicy.c  CriticalNeighPolicy.c  EnhancedRapidPolicy.c  EnsemblePolicy.c  Gossip2Policy.c  Gossip3Policy.c  HopCountAidedPolicy.c  HorizonProbabilityPolicy.c  NeighborCountingPolicy.c  PbNeighCountingPolicy.c  ProbabilityPolicy.c  RapidPolicy.c  TruePolicy.c  r_policies.h
CommunicationPrimitives/protocols/discovery/: topology_discovery.c  topology_discovery.h
CommunicationPrimitives/utility/: myUtils.c  myUtils.h
